# cpp-experiments

./: .gitignore
matrix-groups/: CMakeLists.txt  matrices-groups.cpp
matrix-groups/include/: crossprodmat.h
matrix-groups/src/: crossprodmat.cpp  matrices-groups.cpp
